add: Get methods for store